Started working on the back end but kept getting a 500 error on the app.post on the server.js file, wasn't pulling the req values from survey.html

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -1,31 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <!-- Bootstrap CDN -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>Friend Finder </title>
-</head>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <title>Friend Finder</title>
+  </head>
 
-<body class="text-center">
+  <body class="text-center">
     <div class="container-fluid">
-        <main role="main" class="inner cover">
-            <h1 class="cover-heading">Welcome to Friend Finder</h1>
-            <p class="lead">This is a page to help you find friends or that special someone. Take our quiz below to see
-                who you match with!</p>
-            <a class="btn btn-primary lead" href="/survey" role="button">Survey</a>
-        </main>
+      <main role="main" class="inner cover" style="margin-top: 300px;">
+        <h1 class="cover-heading">Welcome to Friend Finder</h1>
+        <p class="lead">
+          This is a page to help you find friends or that special someone. Take
+          our quiz below to see who you match with!
+        </p>
+        <a class="btn btn-primary lead" href="/survey" role="button">Survey</a>
+      </main>
     </div>
 
-
     <!-- Jquery CDN here -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-
-</body>
-
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.min.js"
+      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
